--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "adbhut",
   "version": "0.1.0",
+  "homepage": "http://siddhu2010.github.io/Advaya",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -36,6 +37,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
